# Search_Engine

./: .gitignore  CMakeLists.txt  README.md
examples/build_example/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/build_example/nlohmann_json/: CTestTestfile.cmake  Makefile  nlohmann_json.pc
examples/build_example/src/: CTestTestfile.cmake  Makefile  answers.json  config.json  requests.json
examples/build_example/src/dir/: f1.txt  f2.txt
examples/build_example/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tests[1]_include.cmake
examples/test_example/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/test_example/nlohmann_json/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/test_example/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/test_example/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tests[1]_include.cmake  tests[1]_tests.cmake
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt  main.cpp  test_InvertedIndex.cpp  test_SearchServer.cpp
